[package]
name = "mesh-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Main binary, bootstrap, lifecycles, and system integration for mesh"

[[bin]]
name = "mesh"
path = "src/main.rs"

[features]
default = []
tls = ["mesh-session/tls"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "fs"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
anyhow.workspace = true
mesh-session = { path = "../mesh-session" }
mesh-storage = { path = "../mesh-storage" }
mesh-routing = { path = "../mesh-routing" }
mesh-topology = { path = "../mesh-topology" }
mesh-wire = { path = "../mesh-wire" }
mesh-grpc = { path = "../mesh-grpc" }
humantime.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
